--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,10 @@
 {% block content %}
-<h1>Home</h1>
-
+    <h1> Home <h1/>
+    <hr>
+    <p> Enter an Integer value: <p/>
+    <form action = "/calculate" method="POST">
+        <input type="number" name="number" id="number">
+        <input type="submit" value="Submit">
+    </form>
+        
 {% endblock %}
